training-data/395-dataset/bugs-data/pandas/31/111111100000000001_log_1.txt
Traceback (most recent call last):
  File "/home/ubuntu/.local/bin/run_custom_patch", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/home/ubuntu/.local/lib/python3.11/site-packages/BugsInPy/run_custom_patch.py", line 193, in main
    replace_code(bug_data, repo_bug_id, file_path)
  File "/home/ubuntu/.local/lib/python3.11/site-packages/BugsInPy/run_custom_patch.py", line 46, in replace_code
    replacement_tree = ast.parse(replacement_code)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 3
    """
IndentationError: unexpected indent

